[package]
name = "nodespace-core-types"
version = "0.1.0"
edition = "2021"
description = "Database-agnostic shared types for NodeSpace"
license = "MIT"
repository = "https://github.com/malibio/nodespace-core-types"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[dev-dependencies]